monitor-app/k8s/cloudwatch-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwatch-exporter
  namespace: monitoring
  labels:
    app: cloudwatch-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-exporter
  template:
    metadata:
      labels:
        app: cloudwatch-exporter
    spec:
      containers:
        - name: cloudwatch-exporter
          image: prom/cloudwatch-exporter:latest
          ports:
            - containerPort: 9106
              name: metrics
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: cloudwatch-exporter-config
---
apiVersion: v1
kind: Service
metadata:
  name: cloudwatch-exporter
  namespace: monitoring
  labels:
    app: cloudwatch-exporter
spec:
  type: ClusterIP
  ports:
    - port: 9106
      targetPort: 9106
      protocol: TCP
      name: metrics
  selector:
    app: cloudwatch-exporter
